[tool.poetry]
name = "meetup_planing"
version = "0.1.0"
description = "Module for planing ivents"
authors = ["ZorkinRA"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.31"
psycopg2-binary = "^2.9.3"
Django = "^4.0.2"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
mypy = "^0.931"
wemake-python-styleguide = "^0.16.0"
pandas = "^1.4.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
